# torque-mlx

./: .gitignore  AGENTS.md  LICENSE  PRD.md  README.md  TASKS.md  pyproject.toml  tqmlx.tex
agents/: DNA.md  README.md  config.yaml  events.md  init.md
agents/roles/: boss.yaml  contractor.yaml  implementer.yaml  reviewer.yaml  scoper.yaml  spec-writer.yaml  tester.yaml
benchmarks/: README.md  mlx_lm_baseline.py  mlx_packed_decode.py  synthetic_decode.py
docs/: benchmark-report.md  cli.md  decode-upgrade-plan.md  mlx-kernel-report.md  mlx-lm-baseline-report.md  model-support.md  repo-map.md  runtime-status.md
docs/architecture/: runtime-boundary.md
docs/contracts/: cache-api.md  fused-artifact.md  model-artifact.md  packed-kv-layout.md
docs/families/: qwen.md
src/torque_mlx/: __init__.py  __main__.py  artifact.py  benchmarking.py  cache.py  cache_mlx.py  cli.py  config.py  conversion.py  hf_safetensors.py  layout.py  mlx_ops.py  quantization.py  qwen_benchmark.py  qwen_eval.py  qwen_mlx.py  reference.py  rotation.py
src/torque_mlx/families/: __init__.py  qwen.py
src/torque_mlx/kernels/: __init__.py  dispatch.py  torque_attn_decode.metal
tests/: test_artifact.py  test_cache.py  test_cache_mlx.py  test_cli.py  test_conversion.py  test_error_budget.py  test_import.py  test_mlx_ops.py  test_quantization.py  test_qwen_benchmark.py  test_qwen_eval.py  test_qwen_family.py  test_qwen_mlx.py  test_rotation.py
work/: README.md
