[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "torque-mlx"
version = "0.1.0"
description = "Rotation-native KV-cache compression for MLX on Apple silicon."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Chris" }
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/torque_mlx"]

[tool.pytest.ini_options]
testpaths = ["tests"]

