[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "torque-mlx"
version = "0.1.0"
description = "Model conversion and KV-cache optimization for MLX on Apple silicon."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Chris" }
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "numpy>=1.26",
  "safetensors>=0.4",
]

[project.scripts]
torque-mlx = "torque_mlx.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]
qwen-eval = [
  "sentencepiece",
  "torch",
  "transformers",
]

[tool.hatch.build.targets.wheel]
packages = ["src/torque_mlx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
